--- a/WebContent/user/reg.html
+++ b/WebContent/user/reg.html
@@ -9,7 +9,7 @@
 		用户名：<input type="text" name="username" id="username"><br />
 		密码：<input type="password" name="password" id="password"> <input
 			id="loginB" type="button" value="注册"><span id="msg"></span><span><a
-			href="login.html">现在登录</a></span>
+			href="login">现在登录</a></span>
 	</form>
 </body>
 <script type="text/javascript" src="../js/ajax.js"></script>
